[metadata]
name = orthorectification
version = "0.0.1"
namespace_packages = orthorectification
author = Michael Pfaffenberger
author_email = mike.pfaffenberger@gmail.com
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
	Operating System :: POSIX :: Linux
	Operating System :: MacOS :: MacOS X
	Topic :: Utilities
	Typing :: Typed
platforms = 
	MacOS X
	Linux
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mpfaffenberger/orthorectification
download_url = https://github.com/mpfaffenberger/orthorectification/archive/orthorectification-0.0.1.tar.gz
[options]
packages = find:
include_package_data = true
zip_safe = true
install_requires = 
	boto3
	sardem
	gdal
	shapely
	numba
	scikit-image
	opencv-python
	numpy
	scipy

setup_requires =
	pytest-runner
	setuptools>=41

[options.package_data]
* = *.yaml, *.json
